--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.4.2",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "source-map-explorer": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
